edition = "2023";
package settings.v1alpha1.apps.v1;

option go_package = "github.com/atlanticdynamic/firelynx/gen/settings/v1alpha1/apps/v1";

message EchoApp {
  // Response text to echo back to the caller
  // env_interpolation: yes
  string response = 1;
}
